# live-3d-rendering

./: .gitignore  TODOS.md  app.py  pyproject.toml  requirements.txt  update_reqs.sh
assets/: styles.css
assets/img/: README.md
live_3d_rendering/: __init__.py  colors.py  display.py  local_stats.py  preprocess.py  render.py  stats_functions.py
paper_stats/: celiac_100_by_100.csv  celiac_10_by_10.csv  celiac_25_by_25.csv  celiac_50_by_50.csv  control_100_by_100.csv  control_10_by_10.csv  control_25_by_25.csv  control_50_by_50.csv  extract.ipynb
